dnl

AC_REVISION($Revision$)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

GLOBUS_FINALIZE

AC_OUTPUT(
        Makefile
        gfs_common.pl
        globus-gridftp-be-gfork.pl
        globus-gridftp-dyn-be.pl
        globus-gridftp-gfork-fe.pl
        globus-gridftp-gfork-mem.pl
)
